syntax = "proto3";

package dirsync;

message Config {
  repeated Sync syncs = 1;
}

message Sync {
  string dir = 1;
  string subdir = 2;
  repeated string servers = 3;
  int64 last_sync_time = 4;
  repeated int64 time_to_sync = 5;
}

message AddSyncRequest {
  Sync sync = 1;
}

message AddSyncResponse {}

service DirsyncService {
  rpc AddSync(AddSyncRequest) returns (AddSyncResponse) {};
}